Color change bokstoppe, indgange, etc

--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -172,7 +172,7 @@ div.rendering p.type, ol.portal_list>li {
 }
 
 .downloadstatistics-box h3, #latest_publication_box_custom h3 {
-  border-bottom: 1px solid #901a1e;
+  border-bottom: 1px solid #959595;
   padding-bottom: 9px;
   margin-bottom: 2px;
 }
