--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -8,7 +8,7 @@
   overflow: hidden;
   border-bottom: 1px solid @ku-entry-border;
   padding-top: 1px;
-  border-top: 1px solid @ku-red;
+  border-top: 1px solid @ku-grey-border;
 
   @media all and (min-width: @screen-md) {
     flex-direction: row;
@@ -93,7 +93,7 @@
           position: absolute;
           top: 6px;
           left: 0;
-          background-color: @ku-red;
+          background-color: @ku-grey-border;
         }
       }
     }
