--- a/less/panels.less
+++ b/less/panels.less
@@ -321,7 +321,7 @@
 
   & > .panel-body {
     padding: 1px 0 0;
-    border-top: 1px solid @ku-red;
+    border-top: 1px solid @ku-grey-border;
   }
 }
 
