--- a/less/variables.less
+++ b/less/variables.less
@@ -26,6 +26,7 @@
 @gray-f5:                #f5f5f5;
 @white-color:            #fff;
 
+@ku-grey-border:         #959595;
 @ku-light-grey:          #606060;
 @ku-search-icons:        @gray-666;
 @ku-news-gray:           #4a4949;
