Color change datepicker

--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -140,7 +140,7 @@
         letter-spacing: 0.25px;
         min-height: 16px;
         padding: 6px 0;
-        border-bottom: 1px solid #901a1e;
+        border-bottom: 1px solid #959595;
       }
 
       tr:nth-child(3) {
