--- a/less/navbar.less
+++ b/less/navbar.less
@@ -867,9 +867,10 @@
       width: 36%;
     }
     @media (min-width: @screen-md) {
-      top: 8px;
+      top: 0;
       left: 24px;
-      width: 27%;
+      height: 100%;
+      width: 28%;
     }
   }
 }
