--- a/less/type.less
+++ b/less/type.less
@@ -415,7 +415,7 @@ blockquote {
   &.full-width {
     width: 100%;
     padding: 0;
-    margin: 5px 0;
+    margin: 5px 0 15px 0;
     float: none;
   }
 }
