--- a/less/navbar.less
+++ b/less/navbar.less
@@ -879,7 +879,7 @@
   @supports (-ms-ime-align: auto) {
     html:lang(en) {
       .topbar-logo {
-        width: 32%;
+        background-size: 300px 28px;
       }
     }
   }
