--- a/less/navbar.less
+++ b/less/navbar.less
@@ -879,6 +879,7 @@
   @supports (-ms-ime-align: auto) {
     html:lang(en) {
       .topbar-logo {
+        width: 36%;
         background-size: 400px 28px;
       }
     }
