--- a/less/panels.less
+++ b/less/panels.less
@@ -243,6 +243,7 @@
 // the help of our collapse JavaScript plugin.
 
 .panel-group {
+  &:extend(.clearfix all);
   &+ .panel-group {
     margin-top: @line-height-computed;
   }
