--- a/less/navbar.less
+++ b/less/navbar.less
@@ -175,8 +175,8 @@
 
 .container,
 .container-fluid {
-  > .navbar-header,
-  > .navbar-collapse {
+  > .navbar-collapse,
+  > .navbar-header {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -307,8 +307,8 @@
       border: 0;
       box-shadow: none;
 
-      > li > a,
-      .dropdown-header {
+      .dropdown-header,
+      > li > a {
         padding: 5px 15px 5px 25px;
       }
 
@@ -875,20 +875,11 @@
     }
   }
 }
-@media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
+@media (min-width: @screen-sm) {
   @supports (-ms-ime-align: auto) {
     html:lang(en) {
       .topbar-logo {
         width: 41%;
-        background-size: 300px 28px;
-      }
-    }
-  }
-}
-@media all and (min-width: @screen-md) {
-  @supports (-ms-ime-align: auto) {
-    html:lang(en) {
-      .topbar-logo {
         background-size: 300px 28px;
       }
     }
