--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -69,9 +69,8 @@
         margin-right: 5px;
         left: 0;
         top: 50%;
-        transform: translateZ(-50%);
+        // transform: translateZ(-50%);
         display: inline-block;
-        text-transform: none;
         color: @ku-red;
         text-decoration: none;
       }
