Slider link underlining

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -159,7 +159,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  text-decoration: none;
+  text-decoration: none!important;
   position: relative;
   color: @text-color;
 
