--- a/less/alerts.less
+++ b/less/alerts.less
@@ -14,9 +14,11 @@
 
   // Headings for larger alerts
   h4 {
-    margin-top: 0;
-    // Specified for the h4 to prevent conflicts of changing @headings-color
-    color: inherit;
+    &:first-child {
+      margin-top: 0;
+      // Specified for the h4 to prevent conflicts of changing @headings-color
+      color: inherit;
+    }
   }
 
   // Provide class for links that match alerts
