--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -558,6 +558,7 @@
 /*
 * Mobile: All column types must behave like single column boxes
 */
+
 .gridbox {
   .all-single-column();
 
@@ -595,6 +596,10 @@
     &.outlined {
       &.with-img {
         border: 0!important;
+
+        &.faculty_color {
+          color: @white-color;
+        }
 
         &.subcolor_6 {
           &::before {
