--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -64,6 +64,10 @@
   padding-bottom: 0;
 }
 
+.gcitem {
+  margin-bottom: 0;
+}
+
 .campaign-block {
   color: @white-color;
   flex-direction: column;
@@ -90,6 +94,21 @@
 
     h3 {
       margin-top: 0;
+    }
+
+    blockquote {
+      font-size: 28px;
+      font-weight: 600;
+      line-height: 1.2;
+
+      &:before {
+        font-size: 80px;
+        color: inherit;
+      }
+
+      footer {
+        color: inherit;
+      }
     }
   }
 
