--- a/less/navbar.less
+++ b/less/navbar.less
@@ -713,7 +713,7 @@
 
       &.dansk {
         &::after {
-          background: transparent url("https://bootstrap.secure.ku.dk/img/flag-dk.png");
+          background: transparent url("https://bootstrap.secure.ku.dk/img/flag-dk.gif");
         }
       }
     }
