Parallax for IE

--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -156,6 +156,7 @@
   // Try to minimize flickering:
   will-change: transform;
   //backface-visibility: hidden;
+  transform-origin: 100% 100% 0px;
   transform-style: preserve-3d;
 }
 @media all and (min-width: @screen-sm) {
