Button with arrow

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -4,7 +4,6 @@
 // Base styles
 // --------------------------------------------------
 // KU:
-
 // .btn:not(.btn-lg):not(.btn-sm):not(.btn-xs) {
 //   // KU
 //   height: @input-height-base;
@@ -77,6 +76,10 @@
       content: "\e079";
       margin-right: 2px;
     }
+  }
+
+  .icon {
+    margin-left: 5px;
   }
 }
 // Alternate buttons
