--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -52,7 +52,7 @@
 
 .ku-branding {
   &::after {
-    border-bottom: @gray-666!important;
+    border-bottom: 1px solid @gray-666!important;
   }
 }
 
