--- a/docs/_includes/css/forms.html
+++ b/docs/_includes/css/forms.html
@@ -52,7 +52,7 @@
   {% endhighlight %}
   <div class="bs-callout bs-callout-warning" id="callout-formgroup-inputgroup">
     <h4>Don't mix form groups with input groups</h4>
-    <p>Do not mix form groups directly with <a href="{{ site.baseurl }}/components/#input-groups">input groups</a>. Instead, nest the input group inside of the form group.</p>
+    <p>Do not mix form groups directly with <a href="{{ site.baseurl }}/components{% if site.github %}.html{% endif %}#input-groups">input groups</a>. Instead, nest the input group inside of the form group.</p>
   </div>
 
 
@@ -250,7 +250,7 @@
   <input type="text" class="form-control" placeholder="Text input"> {% endhighlight %}
   <div class="bs-callout bs-callout-info" id="callout-xref-input-group">
     <h4>Input groups</h4>
-    <p>To add integrated text or buttons before and/or after any text-based <code>&lt;input&gt;</code>, <a href="{{ site.baseurl }}/components/#input-groups">check out the input group component</a>.</p>
+    <p>To add integrated text or buttons before and/or after any text-based <code>&lt;input&gt;</code>, <a href="{{ site.baseurl }}/components{% if site.github %}.html{% endif %}#input-groups">check out the input group component</a>.</p>
   </div>
 
   <h3>Textarea</h3>
@@ -748,7 +748,7 @@
 <p><strong class="text-danger">Feedback icons only work with textual <code>&lt;input class="form-control"&gt;</code> elements.</strong></p>
 <div class="bs-callout bs-callout-warning" id="callout-has-feedback-icon-positioning">
   <h4>Icons, labels, and input groups</h4>
-  <p>Manual positioning of feedback icons is required for inputs without a label and for <a href="{{ site.baseurl }}/components/#input-groups">input groups</a> with an add-on on the right. You are strongly encouraged to provide labels for all inputs for accessibility reasons.
+  <p>Manual positioning of feedback icons is required for inputs without a label and for <a href="{{ site.baseurl }}/components{% if site.github %}.html{% endif %}#input-groups">input groups</a> with an add-on on the right. You are strongly encouraged to provide labels for all inputs for accessibility reasons.
     If you wish to prevent labels from being displayed, hide them with the <code>.sr-only</code> class. If you must do without labels, adjust the <code>top</code> value of the feedback icon. For input groups, adjust the <code>right</code> value to an
     appropriate pixel value depending on the width of your addon.</p>
 </div>
