--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -53,9 +53,7 @@ body {
     font-size: @font-size-body;
   }
 }
-
 // Reset fonts for relevant elements
-
 button,
 input,
 select,
@@ -85,7 +83,6 @@ a {
     color: @link-visited-color;
   }
 }
-
 // Figures
 //
 // We reset this here because previously Normalize had no `figure` margins. This
@@ -182,5 +179,20 @@ hr {
   .form-control {
     // font-size: @font-size-large!important;
     height: auto!important;
+  }
+}
+// Make containing block clickable - parent must be positioned relative.
+
+.stretched-link {
+  ::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    pointer-events: auto;
+    content: "";
+    background-color: rgba(0,0,0,0);
   }
 }
