--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -184,7 +184,7 @@ hr {
 // Make containing block clickable - parent must be positioned relative.
 
 .stretched-link {
-  ::after {
+  &::after {
     position: absolute;
     top: 0;
     right: 0;
