Forms help test

--- a/less/forms.less
+++ b/less/forms.less
@@ -466,7 +466,7 @@ input[type="checkbox"] {
   display: block; // account for any element using help-block
   margin-top: 5px;
   margin-bottom: 5px;
-  color: lighten(@text-color, 25%); // lighten the text some for contrast
+  color: @gray-light; // lighten the text some for contrast
 }
 
 
