--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -1,9 +1,24 @@
-#geonatloginform, .Geonat-Login .LoginLinks {
+/* #geonatloginform, .Geonat-Login .LoginLinks {
   min-height: 20px;
   padding: 15px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
   border-radius: 2px;
+} */
+
+.login-links {
+  font-size: 12px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#geonatloginform .ckeckbox {
+  margin-top: 7px;
+  margin-bottom: 5px;
+}
+
+#geonatloginform form-group:last-child {
+  margin-bottom: 10px;
 }
 
 .logindata {
