--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -1,11 +1,3 @@
-/* #geonatloginform, .Geonat-Login .LoginLinks {
-  min-height: 20px;
-  padding: 15px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 2px;
-} */
-
 .login-links {
   font-size: 12px;
   display: flex;
@@ -17,7 +9,7 @@
   margin-bottom: 5px;
 }
 
-#geonatloginform form-group:last-child {
+#geonatloginform .form-group:last-child {
   margin-bottom: 10px;
 }
 
