--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -4,12 +4,12 @@
   justify-content: space-between;
 }
 
-#geonatloginform .ckeckbox {
+#geonatloginform .checkbox {
   margin-top: 7px;
   margin-bottom: 5px;
 }
 
-#geonatloginform > .form-group:last-child {
+#geonatloginform > .form-group:last-of-type {
   margin-bottom: 10px;
 }
 
