New tiles boxes

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -66,6 +66,7 @@
 @import "ku-footer.less";
 @import "ku-advanced-lists.less";
 @import "ku-news.less";
+@import "ku-tiles.less";
 @import "ku-entries.less";
 @import "ku-slickslider.less";
 @import "ku-datetimepicker.less";
