--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -1,5 +1,17 @@
 // Tiles news boxes
-//.tiles {
+
+.tiles {
+  // Wrap un class .tiles when used with Isotope plugin
+  .tilebox {
+    opacity: 0;
+  }
+
+  &.is-showing .tilebox {
+    opacity: 1;
+    /* reveal when ready */
+  }
+}
+
 .tile-link {
   text-decoration: none;
 
@@ -32,7 +44,6 @@
 
 .tiles-x {
   .tilebox {
-    opacity: 0;
     display: flex;
     flex-direction: column;
     float: left;
@@ -49,6 +60,14 @@
       .tile-img {
         img {
           transform: scale3d(1.02, 1.02, 1.02);
+        }
+      }
+    }
+
+    .tile-link {
+      &:hover {
+        .tile-content {
+          text-decoration: none;
         }
       }
     }
@@ -107,12 +126,7 @@
     }
   }
 }
-//}
 
-.is-showing .tilebox {
-  opacity: 1;
-  /* reveal when ready */
-}
 @media all and (min-width: @screen-xs) {
   .tiles-x {
     .tilebox {
