--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -13,6 +13,7 @@
 }
 
 .tile-link {
+  color: @text-color;
   text-decoration: none;
 
   &:after {
@@ -31,6 +32,19 @@
 }
 
 .tilebox {
+  .header-small {
+    font-weight: 700;
+    color: #666;
+    text-transform: uppercase;
+    letter-spacing: 0.4px;
+    margin: 5px 0;
+
+    .date {
+      float: right;
+      padding-left: 5px;
+    }
+  }
+
   h3 {
     line-height: 1.3;
     margin-top: 0;
@@ -65,6 +79,9 @@
     }
 
     .tile-link {
+      display: flex;
+      flex-direction: column;
+
       &:hover {
         .tile-content {
           text-decoration: none;
@@ -126,7 +143,6 @@
     }
   }
 }
-
 @media all and (min-width: @screen-xs) {
   .tiles-x {
     .tilebox {
@@ -154,6 +170,9 @@
     .tiles-x {
       .tilebox {
         width: 100%;
+      }
+      .tile-body {
+        display: block;
       }
     }
   }
