--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -41,7 +41,7 @@
     color: #666;
     text-transform: uppercase;
     letter-spacing: 0.4px;
-    margin: 5px 0;
+    margin: 0 0 5px 0;
 
     .date {
       float: right;
