--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -7,6 +7,13 @@
       opacity: 0;
       margin-bottom: 23px;
     }
+    @media (max-width: @screen-xs) {
+      .tilebox {
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
   }
 
   &.is-showing {
