--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -75,6 +75,7 @@
     // float: left;
     height: 289px;
     width: 100%;
+    overflow: hidden;
     background-color: #fff;
     box-shadow: 0 0 0 1px #eee;
     transition: box-shadow 0.2s ease-out;
