--- a/less/mixins.less
+++ b/less/mixins.less
@@ -45,3 +45,4 @@
 @import "mixins/ku-content-elements.less";
 @import "mixins/ku-gridbox-mixins.less";
 @import "mixins/ku-news.less";
+@import "mixins/ku-tiles.less";
