New link colour

--- a/less/variables.less
+++ b/less/variables.less
@@ -175,7 +175,7 @@
 @outline-color:     @gray-base;
 
 //** Global textual link color.
-@link-color:            #3479b2;
+@link-color:            #2c6694;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      @link-color;
 @link-visited-color:      #3d239c;
