--- a/less/panels.less
+++ b/less/panels.less
@@ -63,6 +63,10 @@
   > .small > a {
     color: inherit;
   }
+
+  > br {
+    display: block;
+  }
 }
 // Optional footer (stays gray in every modifier class)
 
