--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -112,10 +112,14 @@
     }
   }
 
-  .slick-pause {
-    right: 2%;
-    bottom: 5%;
+  .text-down {
+    flex-direction: row;
+    align-items: flex-end;
   }
+  // .slick-pause {
+  //   right: 2%;
+  //   bottom: 5%;
+  // }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 only in order to understand vertical alignment */
