Disable test in small gridboxes

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -659,6 +659,11 @@
     &.size3 {
       height: @gridbox3;
     }
+    &.size5 {
+      .text {
+        display: none;
+      }
+    }
   }
 }
 @media all and (min-width: @screen-xs) and (max-width: @screen-sm-max) {
