--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -540,6 +540,9 @@
       .header {
         padding: 8px 18px 8px 10px;
       }
+      .text {
+        display: block;
+      }
       @media all and (min-width: @screen-sm) {
         .text {
           display: none!important;
