--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1117,7 +1117,7 @@
             }
 
             .box2 {
-              flex: 0 1 235px;
+              flex: 0 1 @default-col-width;
             }
 
             &::before {
