--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -679,7 +679,7 @@
       }
 
       .box2 {
-        flex: 0 1 235px;
+        flex: 0 1 @default-col-width;
       }
 
       &.full {
@@ -716,7 +716,7 @@
       }
 
       .box2 {
-        flex: 0 1 235px;
+        flex: 0 1 @default-col-width;
       }
       // Video sizing
       &.with-iframe {
