--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -7,11 +7,11 @@
     display: flex;
     flex-direction: column;
     // float: left;
-    height: 289px;
+    height: @gridbox1;
     width: 100%;
     overflow: hidden;
-    background-color: #fff;
-    box-shadow: 0 0 0 1px #eee;
+    background-color: @white-color;
+    box-shadow: 0 0 0 1px @gray-ddd;
     transition: box-shadow 0.2s ease-out;
 
     &:hover {
