--- a/docs/assets/css/doctypes/geonatvidenbladsliste.css
+++ b/docs/assets/css/doctypes/geonatvidenbladsliste.css
@@ -1,2 +1,10 @@
 /* Datatables */
 @import url("../datatables.min.css");
+
+table.dataTable tr th {
+  border-top: 1px solid #d7d7d7;
+  border-bottom: 2px solid #d7d7d7;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  color: #4a4949;
+}
