--- a/docs/assets/css/doctypes/geonatvidenbladsliste.css
+++ b/docs/assets/css/doctypes/geonatvidenbladsliste.css
@@ -1,7 +1,7 @@
 /* Datatables */
 @import url("../datatables.min.css");
 
-table.dataTable tr th {
+table.dataTable>thead>tr>td {
   border-top: 1px solid #d7d7d7;
   border-bottom: 2px solid #d7d7d7;
   padding-top: 8px;
