--- a/docs/assets/css/doctypes/geonatvidenbladsliste.css
+++ b/docs/assets/css/doctypes/geonatvidenbladsliste.css
@@ -11,3 +11,7 @@ table.dataTable>thead>tr>td {
 table.list tr th {
   border-bottom: 0;
 }
+
+table.dataTable>thead>tr>td:last-of-type {
+    width: 25%;
+}
