--- a/docs/assets/css/doctypes/geonatvidenbladsliste.css
+++ b/docs/assets/css/doctypes/geonatvidenbladsliste.css
@@ -12,6 +12,8 @@ table.list tr th {
   border-bottom: 0;
 }
 
-table.dataTable>thead>tr>td:last-of-type {
+@media screen and (max-width: 767px) {
+  table.dataTable>thead>tr>td:last-of-type {
     width: 25%;
+  }
 }
