--- a/docs/assets/css/doctypes/geonatvidenblad.css
+++ b/docs/assets/css/doctypes/geonatvidenblad.css
@@ -1,4 +1,4 @@
-@import url("geonatvidenbladsliste.css");
+@import url("geonatvidenserieforside.css");
 
 #geonatloginform, .Geonat-Login .LoginLinks {
   min-height: 20px;
@@ -18,6 +18,10 @@
 
 .VidenBlad-Authors-Elem {
   clear: both;
+}
+
+.VidenBlad-Authors-Elem:nth-of-type(1) {
+  margin-top: 10px;
 }
 
 .VidenBlad-Authors-Elem+.VidenBlad-Authors-Elem {
