--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -140,6 +140,7 @@ ul {
 .img-with-caption-left {
   float: left;
   margin: 5px 20px 10px 0;
+  max-width: 100%;
 }
 
 div[class^="img-with-caption"] {
