--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -76,7 +76,7 @@
 .tiles-y {
   .tile-link {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     width: 100%;
     position: relative;
     color: initial;
