--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -94,7 +94,7 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid @gray;
-    & + & {
+    & + .tilebox {
       padding-top: 10px;
     }
   }
