--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -2320,7 +2320,7 @@ div.obvius-subdocs ul li.unpublished a.obvius-current {
 
 .ui-widget-content {
   border: 1px solid #dddddd;
-  background: #eeeeee url(images/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x;
+  background-color: #eeeeee;
   color: #252525;
 }
 
