--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -19,6 +19,15 @@
   justify-content: space-between;
 }
 
+.Geonat-Login .error {
+  background-color: #e3c6c7;
+  border-color: #c7a2a4;
+  color: #7b161a;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 2px;
+}
+
 .geonat-serie-search-form {
   margin-top: 10px;
 }
