--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -19,11 +19,12 @@
   justify-content: space-between;
 }
 
-.Geonat-Login .error {
+.Geonat-Login p.error {
   background-color: #e3c6c7;
   border-color: #c7a2a4;
   color: #7b161a;
   padding: 10px;
+  margin: 0;
   border: 1px solid transparent;
   border-radius: 2px;
 }
