--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -349,7 +349,17 @@ nav[aria-label="Pager"] {
   font-weight: 700;
   margin: 10px 0;
 
+// Delete this after deployment
   h3 {
+    color: @gray-light;
+    font-weight: 700;
+    font-size: 1em;
+    display: inline;
+    padding-right: 5px;
+    text-transform: uppercase;
+  }
+  // Delete this after deployment
+  span {
     color: @gray-light;
     font-weight: 700;
     font-size: 1em;
