--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -361,9 +361,9 @@ nav[aria-label="Pager"] {
   // Delete this after deployment
   span {
     color: @gray-light;
+    letter-spacing: .7px;
     font-weight: 700;
     font-size: 1em;
-    display: inline;
     padding-right: 5px;
     text-transform: uppercase;
   }
