--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -18,7 +18,7 @@
   }
 
   @media all and (min-width: @screen-xs) {
-    .tiles-x {
+    &.tiles-x {
       .tilebox {
         width: @default-col-width;
       }
