--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -111,7 +111,7 @@ ul {
 .fritekst_top_img {
   margin-bottom: 10px;
 }
-// Global footer
+// Global footer - to be removed:
 
 .visible-desktop {
   display: block;
