--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -185,3 +185,13 @@ html:lang(en) .ku-branding-text {
 .readAll a:hover {
   background: rgba(244, 244, 244, .7);
 }
+
+.caption h1 {
+    margin-top: 0;
+}
+
+@media (min-width: 768px) {
+  .image-presentation {
+    height: 600px;
+  }
+}
