--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -1,4 +1,3 @@
-
 @media all and (min-width: 768px) {
   #col-left, #col-mid {
     width: calc(50% - 13px);
@@ -12,13 +11,13 @@
   }
 }
 
-.Geonat-Vignet > p {
+.Geonat-Vignet>p {
   margin: 0;
 }
 
 .Geonat-Vignet img {
-  float: none!important;
-  margin: 0!important;
+  float: none !important;
+  margin: 0 !important;
 }
 
 .Geonat-Login p.error {
@@ -43,7 +42,7 @@
   margin-top: 10px;
 }
 
-.item-teaser > p {
+.item-teaser>p {
   margin: 0;
 }
 
@@ -91,5 +90,11 @@ table.dataTable>thead>tr>td:nth-last-child(1) {
 }
 
 .img-with-caption-left {
-  width: auto!important;
+  width: auto !important;
+}
+
+@media print {
+  #Geonat-Login {
+    display: none;
+  }
 }
