--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -94,7 +94,7 @@ table.dataTable>thead>tr>td:nth-last-child(1) {
 }
 
 @media print {
-  #Geonat-Login {
+  .Geonat-Login {
     display: none;
   }
 }
