--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -22,11 +22,9 @@
 
 .Geonat-Login p.error {
   background-color: #e3c6c7;
-  border-color: #c7a2a4;
   color: #7b161a;
+  border: 1px solid #c7a2a4;
   padding: 10px;
-  margin: 0;
-  border: 1px solid transparent;
   border-radius: 2px;
 }
 
