--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -200,13 +200,22 @@ html:lang(en) .ku-branding-text {
 }
 
 @media all and (max-width: 767px) {
- .caption h1 {
-   font-size: 21px;
- }
+  .caption h1 {
+    font-size: 21px;
+  }
 }
 
 @media (min-width: 768px) {
   .image-presentation {
     height: 600px;
   }
+}
+
+/* Usabilla user test */
+.brugertest {
+  background-color: #bddee2;
+  border: 1px solid #ccc;
+  padding-left: 17px;
+  padding-bottom: 15px;
+  border-radius: 2px;
 }
